@@ -30,3 +30,4 @@ depth: 1
  * Prevent 'Delete' link on page edit view from redirecting back to the deleted page (LB (Ben) Johnston)
  * Prevent JS error on images index view when collections dropdown is omitted (Tidiane Dia)
  * Prevent "Entries per page" dropdown on images index view from reverting to 10 (Tidiane Dia)
+ * Set related_name on user revision relation to avoid conflict with django-reversion (Matt Westcott)
